--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,17 +3,18 @@
   <PropertyGroup>
       <RepositoryUrl>https://github.com/fsprojects/FSharp.Codecs.Redis</RepositoryUrl>
       <PackageProjectUrl>https://github.com/fsprojects/FSharp.Codecs.Redis</PackageProjectUrl>
-      <Authors>Mauricio Scheffer,Lev Gorodinski,Oskar Gewalli, Gustavo P. Leon</Authors>
+      <Authors>Mauricio Scheffer, Lev Gorodinski, Oskar Gewalli, Gustavo P. Leon, Jimmy Byrd</Authors>
       <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
       <PackageTags>redis fsharp</PackageTags>
 
       <WarningLevel>3</WarningLevel>
 
       <VersionPrefix>0.1.0</VersionPrefix>
-      <VersionSuffix>alpha-1</VersionSuffix>
+      <VersionSuffix>alpha-2</VersionSuffix>
       <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
       <Version Condition=" '$(VersionSuffix)' == '' ">$(VersionPrefix)</Version>
       <AssemblyVersion>$(VersionPrefix).0</AssemblyVersion>
       <FileVersion>$(VersionPrefix).0</FileVersion>
+      <PackageReleaseNotes>Converts HashEntry to using KeyValuePairs and implicit converts to Redis types</PackageReleaseNotes>
   </PropertyGroup>
 </Project>
