Update F#+ to 1.1-RC1

--- a/FSharp.Codecs.Redis/FSharp.Codecs.Redis.fsproj
+++ b/FSharp.Codecs.Redis/FSharp.Codecs.Redis.fsproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <Compile Include="Codecs.fs" />
-    <PackageReference Include="FSharpPlus" Version="1.1.0-CI00252" />
+    <PackageReference Include="FSharpPlus" Version="1.1.0-RC1" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.*" />
   </ItemGroup>
 
