--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-image: Visual Studio 2017
+image: Visual Studio 2019
 
 before_build:
   - ps: >-
@@ -20,8 +20,7 @@ artifacts:
   # pushing all *.nupkg files in build directory recursively
   - path: '**\*.nupkg'
     name: nupkgs
-    type: NuGetPackage
 nuget:
-  account_feed: true
+  account_feed: false
   project_feed: true
 #  disable_publish_on_pr: false
