--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: csharp
-dotnet: 3.1.101
+dotnet: 6.0.201 
 script: 
   - dotnet restore ./FSharp.Codecs.Redis.sln
   - dotnet build -c Release ./FSharp.Codecs.Redis.sln
-  - dotnet run -p ./Tests/ -c Release -f netcoreapp3.1
+  - dotnet run -p ./Tests/ -c Release -f net6
