--- a/FSharp.Codecs.Redis/FSharp.Codecs.Redis.fsproj
+++ b/FSharp.Codecs.Redis/FSharp.Codecs.Redis.fsproj
@@ -11,7 +11,8 @@
 
   <ItemGroup>
     <Compile Include="Codecs.fs" />
-    <PackageReference Include="FSharpPlus" Version="1.1.0" />
+    <PackageReference Include="FSharpPlus" Version="1.2.3" />
+    <PackageReference Include="Fleece" Version="0.10.0-RC15" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
   </ItemGroup>
 
