--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         dotnet-version: 6.0.201
     - name: Build
-      run: build.bat
+      run: .\build.bat
     - name: Test with dotnet
       run: dotnet run --project .\Tests\Tests.fsproj -c Release -f net461
